fix: overlapping sign out text

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -69,3 +69,7 @@ p {
     cursor: pointer;
   }
 }
+
+.text-sign-out {
+  margin-right: 0.5rem;
+}
